2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Small optimisation suggested by Fred.
	* config/config.initialize.m: Test for working +initialize
	* configure.ac: Use test for +initialize thread safety
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* configure: regenerate
	* Source/NSThread.m: Log warning when going multithreaded without
	a reliable runtime.

2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Make error text compatible with OSX
	* Source/NSSpellServer.m: Use NSLanguages user default
	* Source/NSBundle.m: Use NSLanguages user default
	* Source/NSUserDefaults.m:
	Revert recent attempt to avoid deadlocks (broke thread-safety).
	Rewrite shared defaults initialisation and user language management
	to break the complicated interrelationshp between methods which
	made the  initialisation fragile and incomprehensible.
	Language information derived from operating system or environment
	variables (rather than the defaults database) is now stored in a
	new volatile domain.
	The +userLanguages method just returns the NSLanguages default,
	and +setUserLanguages: now sets NSLanguages in the new volatile domain.
	Simplify setup of shared user defaults to avoid deadlocks.

2011-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: retain operation while finishing so that it
	doesn't get deallocated too soon (when the queue removes it).

2011-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Fix -setAllowsFloats to only operate
	in input strings.
	
2011-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m: Fix possible thread race condition.
	* Source/ObjectiveC2/runtime.c: Fix bogus warning messages.

2011-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: re-introduce per-queue thread pool.

2011-03-03  Richard Frith-Macdonald <rfm@gnu.org>
